# tecora

./: .gitlab-ci.yml  README.md  corpus.py  main.py  pyproject.toml
examples/: birthdays.py  salz_und_pfeffer.py  walk_through.py
src/: test.py
src/tecora/: texts2wp.py  wp.py
tecora/: texts2wp.py
tests/: TEST_WP.md  test_wp.py
